Fixed some z order and resizing issues with the ai agent dialog.

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,8 @@
             <!-- Folders will be rendered here -->
           </nav>
 
+          <div class="agent-resize-handle" id="agent-resize-handle"></div>
+
           <div class="sidebar-agent" id="sidebar-agent">
             <div class="agent-header">
               <span class="material-icons">smart_toy</span>
