Fix Ollama remote URL not being used for chat queries and improve goal milestone UX
LLM Integration:
- Fix chat queries always going to localhost instead of configured remote URL
- Now correctly uses ollamaUrl parameter from settings for chat API calls
- Add logging to show which API URL is being used

Annual Goals Milestones:
- Fix data loss when adding new milestones
- Add saveMilestonesFromDOM() to preserve input values before re-render
- Remove checkbox from goal modal (only show in card view)
- Fix delete button not working by adding type='button' attribute
- Fix checkbox sizing pushing content off screen with :not([type='checkbox']) selector
- Add focus preservation to maintain cursor position during re-renders

This allows benchmarking different GPU machines by configuring their Ollama URLs.

--- a/src/index.html
+++ b/src/index.html
@@ -1317,7 +1317,7 @@
             <div id="goal-modal-milestones" class="milestones-list">
               <!-- Milestones will be rendered here -->
             </div>
-            <button id="add-milestone-btn" class="btn-secondary" style="margin-top: 0.5rem;">
+            <button type="button" id="add-milestone-btn" class="btn-secondary" style="margin-top: 0.5rem;">
               <span class="material-icons" style="font-size: 16px; vertical-align: middle; margin-right: 0.25rem;">add</span>
               Add Milestone
             </button>
@@ -1344,7 +1344,7 @@
             <div id="goal-modal-linked-tasks" class="linked-tasks-list">
               <!-- Linked tasks will be rendered here -->
             </div>
-            <button id="link-task-btn" class="btn-secondary" style="margin-top: 0.5rem;">
+            <button type="button" id="link-task-btn" class="btn-secondary" style="margin-top: 0.5rem;">
               <span class="material-icons" style="font-size: 16px; vertical-align: middle; margin-right: 0.25rem;">link</span>
               Link Task
             </button>
