Add activity tracking with persistent cache and fix UI issues
Activity Tracking:
- Implement real-time activity tracker with per-folder caching
- Activity cache stored in .activity-cache.json within each task folder
- Current day recomputed from actual tasks, previous days read from cache
- Record task completions automatically and update activity grid
- Activity levels mapped to visual intensity (0-6+ completions)

Dashboard Improvements:
- Add multi-folder filter for dashboard stats aggregation
- Dashboard filter dropdown with "All" option and per-folder checkboxes
- Implement stats caching per folder for faster dashboard loading
- Background folder initialization to sync Dropbox folders and cache stats
- Filter state persists to config and applies to both stats and activity

Dropbox Sync:
- Add sync state indicators to sidebar (synced, not-synced, syncing)
- Cloud icon shows sync status: outline when not synced, solid when synced, spinner when syncing
- Reset all Dropbox folders to not-synced on startup for accurate state
- Background sync updates folder states dynamically

Bug Fixes:
- Fix annual goals milestones not saving by capturing DOM values before save
- Fix Ctrl+X closing app when typing in input fields
- Add proper input field detection for keyboard shortcuts

UI/UX:
- Smoother activity grid rendering with year selector
- Month labels on activity tracker
- Hover tooltips show completion counts by date
- Dashboard folder filter label shows selection (All/count/name)

--- a/src/index.html
+++ b/src/index.html
@@ -258,6 +258,27 @@
           <div id="profile-view" class="view">
             <header class="view-header">
               <h1>Dashboard</h1>
+              <div class="header-actions">
+                <div class="dashboard-folder-filter-container">
+                  <label for="dashboard-folder-filter" style="font-size: 0.9rem; color: var(--text-secondary); margin-right: 0.5rem;">Folders:</label>
+                  <div class="custom-select-wrapper">
+                    <button id="dashboard-folder-filter-btn" class="custom-select-btn">
+                      <span id="dashboard-folder-filter-label">All Folders</span>
+                      <span class="material-icons">arrow_drop_down</span>
+                    </button>
+                    <div id="dashboard-folder-filter-dropdown" class="custom-select-dropdown" style="display: none;">
+                      <div class="filter-option" data-folder-id="all">
+                        <input type="checkbox" id="dashboard-filter-all" checked>
+                        <label for="dashboard-filter-all">All Folders</label>
+                      </div>
+                      <div class="filter-divider"></div>
+                      <div id="dashboard-folder-filter-options">
+                        <!-- Folder options will be dynamically populated -->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </header>
 
             <div class="view-content">
@@ -287,6 +308,61 @@
                   </div>
                   <div class="metric-value" id="stat-pending">0</div>
                   <div class="metric-description">Tasks still in progress</div>
+                </div>
+              </div>
+
+              <!-- Activity Tracker Component -->
+              <div class="activity-tracker-section">
+                <div class="activity-tracker-header">
+                  <h2 class="activity-tracker-title">
+                    <span id="activity-count">0 completions</span> in the last year
+                  </h2>
+                </div>
+
+                <div class="activity-tracker-container">
+                  <!-- Main grid area -->
+                  <div class="activity-grid-wrapper">
+                    <!-- Day labels (left side) -->
+                    <div class="activity-day-labels">
+                      <div class="day-label"></div> <!-- Empty for spacing -->
+                      <div class="day-label">Mon</div>
+                      <div class="day-label"></div> <!-- Empty spacing -->
+                      <div class="day-label">Wed</div>
+                      <div class="day-label"></div> <!-- Empty spacing -->
+                      <div class="day-label">Fri</div>
+                      <div class="day-label"></div> <!-- Empty for spacing -->
+                    </div>
+
+                    <!-- Month labels (top) and grid -->
+                    <div class="activity-grid-content">
+                      <div class="activity-month-labels" id="activity-month-labels">
+                        <!-- Month labels will be dynamically generated -->
+                      </div>
+
+                      <div class="activity-grid" id="activity-grid">
+                        <!-- 52 weeks x 7 days grid will be dynamically generated -->
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Year selector (right side) -->
+                  <div class="activity-year-selector">
+                    <div class="year-option active" data-year="2025">2025</div>
+                    <div class="year-option" data-year="2024">2024</div>
+                    <div class="year-option" data-year="2023">2023</div>
+                    <div class="year-option" data-year="2022">2022</div>
+                  </div>
+                </div>
+
+                <!-- Legend -->
+                <div class="activity-legend">
+                  <span class="legend-label">Less</span>
+                  <div class="legend-box level-0"></div>
+                  <div class="legend-box level-1"></div>
+                  <div class="legend-box level-2"></div>
+                  <div class="legend-box level-3"></div>
+                  <div class="legend-box level-4"></div>
+                  <span class="legend-label">More</span>
                 </div>
               </div>
 
